--- a/frogger/src/application/confirm.fxml
+++ b/frogger/src/application/confirm.fxml
@@ -1,27 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
-
-<Pane prefHeight="250.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
-	fx:controller="application.confirmControl" styleClass="quitbackground" >
+<Pane prefHeight="250.0" prefWidth="500.0" styleClass="quitbackground" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.confirmControl">
    <children>
-      <Button layoutX="190.0" layoutY="125.0" mnemonicParsing="false" onAction="#quit" prefHeight="40.0" prefWidth="120.0" text="Yes" />
-      <Button layoutX="190.0" layoutY="165.0" mnemonicParsing="false" onAction="#conf_to_menu" prefHeight="40.0" prefWidth="120.0" text="No" fx:id="closeButton"/>
-      <Text layoutX="195.0" layoutY="94.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Quit the Game?">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Text>
-      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="238.0" layoutY="51.0" pickOnBounds="true" preserveRatio="true">
+         
+      <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="230.0" layoutY="40.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../resources/misc/warning.png" />
          </image>
       </ImageView>
+      <Label layoutX="180.0" layoutY="89.0" styleClass="quittext" text="Quit the Game?" />
+      
+      <Button layoutX="190.0" layoutY="125.0" mnemonicParsing="false" onAction="#quit" prefHeight="40.0" prefWidth="120.0" styleClass="yes" text="Yes" />
+      <Button fx:id="closeButton" layoutX="190.0" layoutY="177.0" mnemonicParsing="false" onAction="#conf_to_menu" prefHeight="40.0" prefWidth="120.0" styleClass="no" text="No" />
+      
    </children>
 </Pane>
