--- a/frogger/src/application/confirm.fxml
+++ b/frogger/src/application/confirm.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane prefHeight="250.0" prefWidth="500.0" styleClass="quitbackground" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.confirmControl">
+<Pane prefHeight="250.0" prefWidth="500.0" styleClass="quitbackground" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ConfirmControl">
    <children>
          
       <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="230.0" layoutY="40.0" pickOnBounds="true" preserveRatio="true">
