--- a/frogger/src/application/main.fxml
+++ b/frogger/src/application/main.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane prefHeight="800.0" prefWidth="600.0" styleClass="menubackground" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.mainControl">
+<Pane prefHeight="800.0" prefWidth="600.0" styleClass="menubackground" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MainControl">
    <children>
    
 	  <ImageView fitHeight="300.0" fitWidth="400.0" layoutX="100.0" layoutY="80.0" pickOnBounds="true" preserveRatio="true">
