--- a/frogger/src/application/tutorial.fxml
+++ b/frogger/src/application/tutorial.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Text?>
 
-<Pane prefHeight="800.0" prefWidth="600.0" styleClass="tutorialbackground" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.tutorialControl">
+<Pane prefHeight="800.0" prefWidth="600.0" styleClass="tutorialbackground" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.TutorialControl">
    <children>
       
       <ImageView fitHeight="100.0" fitWidth="100.0" layoutX="75.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true">
